<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/ingredient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:hint="@string/enter_ingredient_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ingredient_separator"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ingredient_measure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:hint="@string/enter_ingredient_measure"
        android:importantForAutofill="no"
        android:inputType="text" />

</LinearLayout>