<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <EditText
            android:id="@+id/recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/recipe_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            android:contentDescription="@string/recipe_photo"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_name"
            app:layout_constraintWidth_percent="0.4" />

        <EditText
            android:id="@+id/recipe_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/recipe_category"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@id/recipe_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_photo" />

        <TextView
            android:id="@+id/ingredients_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recipe_photo"
            app:layout_constraintTop_toTopOf="@id/recipe_photo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredients"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@id/recipe_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recipe_photo"
            app:layout_constraintTop_toBottomOf="@id/ingredients_title" />

        <TextView
            android:id="@+id/description_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_category" />


        <EditText
            android:id="@+id/recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="bottom"
            android:hint="@string/recipe_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_title" />

        <TextView
            android:id="@+id/instruction_title"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/instruction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_description" />

        <EditText
            android:id="@+id/recipe_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:hint="@string/instruction"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/instruction_title" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/recipe_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="recipe_description, recipe_photo, recipe_category, recipe_instruction, recipe_name, recipe_view, ingredients, ingredients_title, instruction_title" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>