<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogCardViewStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/pick_from_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_from_gallery"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/barrier_end_of_buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/enter_uri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_uri"
            app:layout_constraintEnd_toEndOf="@id/barrier_end_of_buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pick_from_gallery" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_uri" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_end_of_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="pick_from_gallery, enter_uri" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>