<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/recipe_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/recipe_photo"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recipe_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Test a very long recipe name for recipe title" />

        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/recipe_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recipe_photo"
            app:layout_constraintTop_toBottomOf="@id/recipe_name"
            tools:text="Test a very long recipe description for recipe description. Test a very long recipe description for recipe description. Test a very long recipe description for recipe description" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_bottom_recipe_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="recipe_photo, recipe_description" />

        <ImageButton
            android:id="@+id/edit_recipe"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/edit_recipe"
            android:src="@drawable/ic_edit_recipe"
            app:layout_constraintEnd_toStartOf="@id/delete_recipe"
            app:layout_constraintTop_toBottomOf="@id/barrier_bottom_recipe_info" />

        <ImageButton
            android:id="@+id/delete_recipe"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/delete_recipe"
            android:src="@drawable/ic_delete_recipe"
            app:layout_constraintEnd_toStartOf="@id/favourite_recipe"
            app:layout_constraintTop_toBottomOf="@id/barrier_bottom_recipe_info" />

        <ImageButton
            android:id="@+id/favourite_recipe"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/favourite_recipe"
            android:src="@drawable/ic_favourite_border_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_bottom_recipe_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>